syntax="proto2";
package gsp;
import "CommandCode.proto";
option java_package="com.gproject.common.dto.proto";
option java_outer_classname="RPCDTO";

//网关发送的数据
message GateSendMessage{
  optional int64 playerId=1;
  required CommandCode cmdCode=2;
  optional bytes reqData=3;
}
//发往网关的数据
message SendGateMessage{
   repeated  int64 playerIds=1;
   required CommandCode cmdCode=2;
   optional bytes reqData=3;
}
//命令类型
enum CommandType{
   Common=1;//通用类型
   
}
//游戏数据包
message GameMessage{
  required CommandCode cmdCode=1;
  optional bytes reqData=2;
  required  CommandType cmdType=3[default=Common];
  optional int64 playerId=4;
}